--- a/resume_screening_ai/requirements.txt
+++ b/resume_screening_ai/requirements.txt
@@ -5,3 +5,7 @@ scikit-learn==1.4.2
 pandas==2.1.4
 numpy==1.26.4
 scipy==1.11.4
+sentence-transformers==2.6.1
+torch==2.2.2
+joblib==1.3.2
+pillow==10.4.0
